Bug 332915 - RoleMessageHasAttachments: ignore signed messages
Summary: RoleMessageHasAttachments: ignore signed messages
Status: RESOLVED FIXED
Alias: None
Product: trojita
Classification: Applications
Component: Core (other bugs)
Version First Reported In: git
Platform: unspecified Linux
: NOR minor
Target Milestone: ---
Assignee: Trojita default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-01 16:02 UTC by Jan Kundrát
Modified: 2014-04-04 11:55 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Kundrát 2014-04-01 16:02:59 UTC
When checking whether a message has attachments, the multipart/signed TreeItemPart should be skipped and instead its children shall be processed.
Comment 1 Jan Kundrát 2014-04-04 11:55:29 UTC
Git commit 3d3eaced989b8d77a21113b4806fecb0faabb302 by Jan Kundrát.
Committed on 03/04/2014 at 18:24.
Pushed by jkt into branch 'master'.

Improve detecting of attachments

This patch makes it "ignore" single-part multipart/* and any multipart/signed.
In any of these cases, the actual nested MIME part is checked.

Support for proper handling of multipart/alternative got added as well.

v2: Refactoring, and disregard any multipart altogether, i.e. just look at the
nested body parts. See inline comments for details.

Thanks to Thomas Lübking & Stephan Platz for their review.
REVIEW: 117360

M  +37   -29   src/Imap/Model/MailboxTree.cpp
M  +1    -0    src/Imap/Model/MailboxTree.h

http://commits.kde.org/trojita/3d3eaced989b8d77a21113b4806fecb0faabb302